feat: improved styling of all of the applications

--- a/apps/container/package.json
+++ b/apps/container/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mf-hub/loader": "workspace:*",
+    "@mf-hub/ui": "workspace:*",
     "@tanstack/react-router": "^1.45.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -22,6 +23,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "vite": "^5.4.0"
   }
 }
