--- a/apps/calendar-app/package.json
+++ b/apps/calendar-app/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview --port 3002"
   },
   "dependencies": {
+    "@mf-hub/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +18,9 @@
     "@tanstack/router-plugin": "^1.45.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.3.0"
