--- a/libraries/ui/package.json
+++ b/libraries/ui/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "lucide-react": "^0.468.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
