--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-    "name": "microfrontend-hub",
-    "version": "1.0.0",
-    "private": true,
-    "description": "A hub application for micro frontends using Module Federation",
-    "scripts": {
-        "dev": "pnpm -r --parallel run dev",
-        "build": "pnpm -r run build",
-        "lint": "pnpm -r run lint",
-        "clean": "pnpm -r run clean && rimraf node_modules"
-    },
-    "dependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
-    },
-    "devDependencies": {
-        "typescript": "^5.3.3",
-        "rimraf": "^5.0.5"
-    },
-    "engines": {
-        "node": ">=18.0.0",
-        "pnpm": ">=8.0.0"
-    },
-    "packageManager": "pnpm@8.15.0"
+  "name": "microfrontend-hub",
+  "version": "1.0.0",
+  "private": true,
+  "description": "A hub application for micro frontends using Module Federation",
+  "scripts": {
+    "dev": "pnpm -r --parallel run dev",
+    "build": "pnpm -r run build",
+    "lint": "pnpm -r run lint",
+    "clean": "pnpm -r run clean && rimraf node_modules",
+    "dev:api": "pnpm --filter @mf-hub/admin-api dev",
+    "build:api": "pnpm --filter @mf-hub/admin-api build",
+    "db:migrate": "pnpm --filter @mf-hub/admin-api migrate",
+    "db:seed": "pnpm --filter @mf-hub/admin-api seed",
+    "db:setup": "pnpm --filter @mf-hub/admin-api db:setup"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "rimraf": "^5.0.5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
+  "packageManager": "pnpm@8.15.0"
 }
