feat: integrate admin api remote apps via context

--- a/libraries/ui/tsconfig.json
+++ b/libraries/ui/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
+    "jsx": "react-jsx",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "declaration": true,
     "declarationMap": true
   },
