--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "pnpm -r run build",
     "lint": "pnpm -r run lint",
     "clean": "pnpm -r run clean && rimraf node_modules",
+    "demo:preview": "pnpm --filter @mf-hub/demo-app preview",
+    "container:preview": "pnpm --filter @mf-hub/container preview",
+    "calendar:preview": "pnpm --filter @mf-hub/calendar-app preview",
     "dev:api": "pnpm --filter @mf-hub/admin-api dev",
     "build:api": "pnpm --filter @mf-hub/admin-api build",
     "db:migrate": "pnpm --filter @mf-hub/admin-api migrate",
