--- a/services/admin-api/package.json
+++ b/services/admin-api/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.1.1",
     "@types/node": "^22.9.0",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.2",
