--- a/apps/demo-app/package.json
+++ b/apps/demo-app/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
