--- a/apps/calendar-app/package.json
+++ b/apps/calendar-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
+    "@tanstack/react-router": "^1.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
