--- a/apps/demo-app/package.json
+++ b/apps/demo-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
+    "@tanstack/react-router": "^1.45.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
