--- a/libraries/router/package.json
+++ b/libraries/router/package.json
@@ -16,13 +16,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --clean",
-    "dev": "tsup src/index.ts --format esm --dts --watch"
-  },
-  "dependencies": {
-    "@tanstack/react-router": "^1.120.3"
+    "build": "tsup src/index.ts --format esm --dts --clean --external react --external react-dom --external @tanstack/react-router",
+    "dev": "tsup src/index.ts --format esm --dts --watch --external react --external react-dom --external @tanstack/react-router"
   },
   "peerDependencies": {
+    "@tanstack/react-router": "^1.45.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
