--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "demo:preview": "pnpm --filter @mf-hub/demo-app preview",
     "container:preview": "pnpm --filter @mf-hub/container preview",
     "calendar:preview": "pnpm --filter @mf-hub/calendar-app preview",
+    "admin:preview": "pnpm --filter @mf-hub/admin-app preview",
     "dev:api": "pnpm --filter @mf-hub/admin-api dev",
     "build:api": "pnpm --filter @mf-hub/admin-api build",
     "db:migrate": "pnpm --filter @mf-hub/admin-api migrate",
