--- a/services/admin-api/data/remote-apps.json
+++ b/services/admin-api/data/remote-apps.json
@@ -11,7 +11,7 @@
       "is_active": true,
       "display_order": 1,
       "created_at": "2026-01-13T23:47:58.850Z",
-      "updated_at": "2026-01-13T23:47:58.850Z"
+      "updated_at": "2026-01-16T23:07:21.464Z"
     },
     {
       "id": "f11f7bf8-52fa-4047-b952-38d22a043987",
@@ -25,6 +25,19 @@
       "display_order": 2,
       "created_at": "2026-01-13T23:47:58.850Z",
       "updated_at": "2026-01-13T23:47:58.850Z"
+    },
+    {
+      "id": "a9b223e7-594a-4350-b431-a9ed2d9c2cad",
+      "name": "fake-app",
+      "title": "Fake App",
+      "icon": "Compass",
+      "url": "http://localhost:3004",
+      "scope": "fake-app",
+      "module": "./routes",
+      "is_active": true,
+      "display_order": 0,
+      "created_at": "2026-01-16T23:08:16.001Z",
+      "updated_at": "2026-01-16T23:08:48.416Z"
     }
   ]
 }
