--- a/apps/calendar-app/package.json
+++ b/apps/calendar-app/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.3.5",
+    "@module-federation/vite": "^1.1.0",
     "@tanstack/router-devtools": "^1.45.0",
     "@tanstack/router-plugin": "^1.45.0",
     "@types/react": "^18.2.0",
