--- a/libraries/loader/package.json
+++ b/libraries/loader/package.json
@@ -21,11 +21,14 @@
     "clean": "rimraf dist"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.3.5",
+    "@module-federation/vite": "^1.1.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "vite": "^5.4.0",
     "vite-plugin-dts": "^3.9.0"
   },
   "peerDependencies": {
-    "@originjs/vite-plugin-federation": "^1.3.5"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
