--- a/apps/admin-app/package.json
+++ b/apps/admin-app/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
-    "@tanstack/react-router": "^1.45.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@tanstack/react-router": "^1.154.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@module-federation/vite": "^1.1.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.4.0"
+    "@module-federation/vite": "^1.9.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
   }
 }
