--- a/apps/calendar-app/package.json
+++ b/apps/calendar-app/package.json
@@ -10,21 +10,22 @@
   "dependencies": {
     "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
-    "@tanstack/react-router": "^1.45.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@tanstack/react-router": "^1.154.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@module-federation/vite": "^1.1.0",
-    "@tanstack/router-devtools": "^1.45.0",
-    "@tanstack/router-plugin": "^1.45.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.3.0"
+    "@module-federation/vite": "^1.9.7",
+    "@tanstack/router-devtools": "^1.154.14",
+    "@tanstack/router-plugin": "^1.154.14",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2"
   }
 }
