--- a/apps/webpack-demo-app/package.json
+++ b/apps/webpack-demo-app/package.json
@@ -11,31 +11,32 @@
   "dependencies": {
     "@mf-hub/router": "workspace:*",
     "@mf-hub/ui": "workspace:*",
-    "@tanstack/react-router": "^1.45.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@tanstack/react-router": "^1.154.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.24.0",
-    "@babel/preset-typescript": "^7.24.0",
-    "@module-federation/enhanced": "^0.8.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.1",
-    "postcss": "^8.4.0",
-    "postcss-loader": "^8.1.1",
-    "serve": "^14.2.0",
-    "style-loader": "^3.3.4",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.0"
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@module-federation/enhanced": "^0.23.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.23",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.6",
+    "mini-css-extract-plugin": "^2.10.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
+    "serve": "^14.2.5",
+    "style-loader": "^4.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.3"
   }
 }
