--- a/libraries/router/package.json
+++ b/libraries/router/package.json
@@ -20,14 +20,14 @@
     "dev": "tsup src/index.ts --format esm --dts --watch --external react --external react-dom --external @tanstack/react-router"
   },
   "peerDependencies": {
-    "@tanstack/react-router": "^1.45.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@tanstack/react-router": "^1.154.14",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "tsup": "^8.3.5",
-    "typescript": "~5.7.2"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3"
   }
 }
