--- a/libraries/ui/package.json
+++ b/libraries/ui/package.json
@@ -6,25 +6,31 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./globals.css": "./src/styles/globals.css",
-    "./tailwind.preset": "./tailwind.preset.ts"
+    "./globals.css": "./src/styles/globals.css"
   },
   "scripts": {
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.468.0",
-    "tailwind-merge": "^2.2.0"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "typescript": "^5.3.0"
+    "@types/react": "^19.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^19.0.0",
+    "motion": "^12.0.0"
+  },
+  "peerDependenciesMeta": {
+    "motion": {
+      "optional": true
+    }
   }
 }
